Update gem-push.yml to run tests without specifying 'spec'

--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -27,7 +27,7 @@ jobs:
         run: bundle install
 
       - name: Run tests
-        run: bundle exec rake spec
+        run: bundle exec rake
 
       - name: Publish to RubyGems
         run: |
