--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -19,9 +19,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Ruby 2.7
         uses: ruby/setup-ruby@v1
-        #      uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
         with:
           ruby-version: 2.7.6
+          bundler-cache: true
 
       - name: Install dependencies
         run: bundle install
