--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           ruby-version: 2.7.6
           bundler-cache: true
+      - uses: fac/ruby-gem-setup-credentials-action@v2
+        with:
+          token: ${{ secrets.RUBYGEMS_AUTH_TOKEN }}
 
       - name: Install dependencies
         run: bundle install
@@ -30,12 +33,7 @@ jobs:
         run: bundle exec rake
 
       - name: Publish to RubyGems
-        run: |
-          mkdir -p $HOME/.gem
-          touch $HOME/.gem/credentials
-          chmod 0600 $HOME/.gem/credentials
-          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          gem build *.gemspec
-          gem push *.gem
-        env:
-          GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
+        if: github.ref == 'refs/heads/main'
+        uses: fac/ruby-gem-push-action@v2
+        with:
+          key: github
