--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Run tests
         run: bundle exec rake
 
+      - name: Build
+        run: gem build *.gemspec
+
       - name: Publish to RubyGems
         if: github.ref == 'refs/heads/main'
         uses: fac/ruby-gem-push-action@v2
