Update build step in gem-push.yml to use Rake for gem packaging

--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -30,7 +30,7 @@ jobs:
         run: bundle exec rake
 
       - name: Build
-        run: gem build *.gemspec
+        run: bundle exec rake build
 
       - name: Publish to RubyGems
         if: github.ref == 'refs/heads/main'
