--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -36,4 +36,4 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: fac/ruby-gem-push-action@v2
         with:
-          key: github
+          key: ${{ secrets.RUBYGEMS_AUTH_TOKEN }}
