--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -32,7 +32,6 @@ jobs:
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
           printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          bundle exec rake build
-          gem push ./pkg/*.gem
+          bundle exec rake release
         env:
           GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
